# CS100

./: README.md
final-project-ameno011-abrou004-skak001-master/: .gitignore  CMakeLists.txt  README.md  test.cpp
final-project-ameno011-abrou004-skak001-master/header/: GameQuestion.hpp  TF.hpp  fill.hpp  game.hpp  mc.hpp  option.hpp  question.hpp  type.hpp
final-project-ameno011-abrou004-skak001-master/notes/: music_answers_fill.txt  music_answers_mc.txt  music_fill.txt  music_mc.txt  music_tf.txt  notes.txt  science_answers_fill.txt  science_answers_mc.txt  science_fill.txt  science_mc.txt  science_tf.txt  sports_answers_fill.txt  sports_answers_mc.txt  sports_fill.txt  sports_mc.txt  sports_tf.txt
lab-02---github-flow-cowboy-bebop-abrou004-ameno011-master/: .gitignore  CMakeLists.txt  main.cpp  main2.cpp  test.cpp
lab-03---composite-pattern-ameno011-abrou004-master/: .gitignore  CMakeLists.txt  unit_test.cpp
lab-04---valgrind-ameno011-abrou004-4-main/: person.cpp  person.h  personList.cpp
lab-05---strategy-pattern-ameno011-abrou004-5-master/: .gitignore  CMakeLists.txt  test.cpp
lab-07---factory-pattern-abrou004-ameno011-master/: .gitignore  CMakeLists.txt  test.cpp
lab-07---factory-pattern-abrou004-ameno011-master/header/: add.hpp  div.hpp  factory.hpp  mult.hpp  op.hpp  pow.hpp  rand.hpp  sub.hpp
lab-07---factory-pattern-abrou004-ameno011-master/src/: main.cpp
lab-07---factory-pattern-abrou004-ameno011-master/tests/: factory_tests.hpp
lab-08---visitor-pattern-abrou004-ameno011-8-master/: .gitignore  CMakeLists.txt  tests.cpp
(+58 files in other folders)
