CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_STANDARD 11)

ADD_SUBDIRECTORY(googletest)

ADD_EXECUTABLE(test
       test.cpp
)

ADD_EXECUTABLE(calculator
	src/main.cpp
)

TARGET_LINK_LIBRARIES(test gtest)
TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)


TARGET_LINK_LIBRARIES(calculator gtest)
TARGET_COMPILE_DEFINITIONS(calculator PRIVATE gtest_disable_pthreads=ON)
